change the theme and some ui changes

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -102,8 +102,16 @@ html, body {
 }
 
 .gradient {
-  background: conic-gradient(from 230.29deg at 51.63% 52.16%, rgb(36, 0, 255) 0deg, rgb(0, 135, 255) 67.5deg, rgb(108, 39, 157) 198.75deg, rgb(24, 38, 163) 251.25deg, rgb(54, 103, 196) 301.88deg, rgb(105, 30, 255) 360deg);
+  background: conic-gradient(
+    from 230.29deg at 51.63% 52.16%,
+    rgb(153, 147, 192) 0deg,
+    rgb(12, 81, 209) 67.5deg,
+    rgb(12, 81, 209) 198.75deg,
+    rgb(12, 81, 209) 360deg 
+  );
 }
+
+
 @keyframes gradient-move {
   0% { background-position: 0% 50%; }
   50% { background-position: 100% 50%; }
